[package]
name = "easytcp"
version = "0.1.0"
edition = "2024"
description = "Create async network applications easily!"
license = "GPL-3.0"
repository = "https://github.com/mrtnvgr/easytcp/"
keywords = ["networking", "async", "tokio", "tcp"]
categories = ["network-programming", "asynchronous"]

[dependencies]
tokio = { version = "1.45.1", features = ["rt-multi-thread", "net", "io-util", "sync"] }
postcard = { version = "1.1.1", features = ["use-std"] }
serde = { version = "1.0.219", features = ["derive"] }
trait-set = "0.3.0"
thiserror = "2.0"
scc = "2.3.4"
sha2 = "0.10"
log = "0.4"
